--- a/app.css
+++ b/app.css
@@ -11,18 +11,21 @@
 
 .container {
   max-width: 1128px;
-  border: 2px red solid;
+  /* border: 2px red solid; */
   margin: 0 auto;
-  padding: 3em 5em;
+  padding: 6em 5em;
 }
 
 .row {
   display: flex;
-  gap: 3em;
+  gap: 4em;
+  justify-content: center;
 }
 
-.col {
-  width: 100%;
+.col,
+.first-img,
+.second-img {
+  width: 50%;
 }
 
 img {
@@ -46,21 +49,60 @@ header {
   font-family: var(--roboto);
   font-weight: 300;
   letter-spacing: 0.5em;
+  color: var(--dark-green);
 }
 
 .fbox-header {
   font-family: var(--playfair);
-  font-size: 3.75em;
+  font-size: 3.75rem;
   font-size: 900;
+  color: var(--brown);
 }
 
 .top-text,
 .fbox-header {
-  max-width: 70%;
+  max-width: 80%;
 }
 
 .sbox-header {
   font-family: var(--playfair);
   font-weight: 900;
   text-align: center;
+}
+
+.sbox-header,
+.tbox-header,
+.fobox-header {
+  font-family: var(--playfair);
+  font-size: 2.25rem;
+  margin-bottom: 0.4em;
+  color: var(--cream);
+}
+
+.sbox-header {
+  color: var(--brown);
+  margin-bottom: 0.8em;
+}
+
+p {
+  font-family: var(--roboto);
+  font-size: 1.3125rem;
+  color: white;
+}
+
+.sp {
+  color: var(--dark-green);
+}
+
+.second-box {
+  margin-bottom: 3.5em;
+  margin-top: 2em;
+}
+
+.third-box {
+  background-color: var(--dark-green);
+}
+
+.fourth-box {
+  background-color: var(--brown);
 }
